--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
 
   "private": false, "license": "ISC",
 
-  "main": "bu.js",
-  "scripts": { "test": "nodejs test/all.js" },
+  "main": "buu.mjs",
+  "scripts": { "test": "nodemjs test/all.mjs" },
   "directories": { "test": "test" },
 
-  "dependencies": {},
+  "dependencies": {
+  },
   "browser": {
   },
   "devDependencies": {
+    "nodemjs": "^0.1.8",
+    "p-fatal": "^0.1.3",
+    "p-tape": "^4.0.0",
+    "usnam-pmb": "^0.2.4"
   },
 
 
